[FIX] null 에러 해결